fix: disable pinch zoom on iOS

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -93,3 +93,7 @@
       "calt" 1;
   }
 }
+
+body {
+  touch-action: pan-x pan-y;
+}
